# homewakeword

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  hacs.json  pyproject.toml
.github/: PRE_COMMIT_REVIEW.md
.github/workflows/: ci.yml
addon/homewake-bcresnet/: Dockerfile  config.yaml  run.sh
addon/homewakeword/: Dockerfile  config.yaml  run.sh
addon/homewakeword-bcresnet/: Dockerfile  config.yaml
custom_components/homewakeword/: __init__.py  config_flow.py  const.py  helper.py  manifest.json  strings.json
docs/: development.md  release.md
homewake/: __init__.py  audio.py  cli.py  config.py  custom_import.py  health.py  registry.py  runtime.py  selftest.py
homewake/detector/: __init__.py  base.py  bcresnet.py
homewake/server/: wyoming.py
homewake/training/: evaluate.py  export.py  manifest.py
homewakeword/: __init__.py  audio.py  cli.py  config.py  events.py  health.py  registry.py  runtime.py  selftest.py  vad.py
homewakeword/detector/: __init__.py  bcresnet.py
homewakeword/server/: wyoming.py
homewakeword/training/: evaluate.py  export.py
models/: manifest.yaml
models/bcresnet-real/: bcresnet_float32.tflite  bcresnet_int8.tflite  manifest.yaml
models/openwakeword-real/: manifest.yaml
scripts/: check_scope_fidelity.py  commit_with_review.py  final_runtime_validation.py  generate_review.py  ha_smoke.py  release_dry_run.py  replay_stream.py  review_code_quality.py  soak_test.py  train_custom.py  validate_addon_config.py  validate_release.py  validate_repo.py  validate_startup.py  verify_plan_compliance.py
tests/unit/: test_audio.py  (+7 more)
(+73 files in other folders)
