[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homewakeword"
version = "0.0.0"
description = "HomeWakeWord Home Assistant add-on skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6",
]

[tool.setuptools]
packages = ["homewakeword"]

[tool.pytest.ini_options]
testpaths = ["tests"]
