[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homewakeword"
version = "0.0.0"
description = "HomeWakeWord Home Assistant add-on skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6",
  "numpy>=1.26",
  "onnxruntime>=1.17.0",
  "openwakeword>=0.6.0",
  "tflite-runtime>=2.14.0",
  "librosa>=0.11.0",
  "soundfile>=0.13.1",
  "speexdsp-ns>=0.1.2",
  "wyoming>=1.6.0",
]

[tool.setuptools]
packages = ["homewakeword"]

[tool.pytest.ini_options]
testpaths = ["tests"]
